--- a/eventlist/src/main/res/layout/item_title.xml
+++ b/eventlist/src/main/res/layout/item_title.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="title"
-            type="String"/>
+            type="android.text.SpannableString"/>
 
         <variable
             name="config"
