--- a/eventlist/src/main/res/layout/event_list_view.xml
+++ b/eventlist/src/main/res/layout/event_list_view.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/group_title"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -534,7 +534,7 @@
 
                 </LinearLayout>
 
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/event_grid_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
