--- a/eventlist/src/main/res/layout/item_event.xml
+++ b/eventlist/src/main/res/layout/item_event.xml
@@ -19,9 +19,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_margin="1dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:padding="1dp"
         app:backgroundColor="@{event.backgroundColor}"
         app:backgroundRes="@{event.backgroundRes}">
 
